fix(images): put pop up with more z-index than description image

--- a/css/main.css
+++ b/css/main.css
@@ -383,6 +383,7 @@ h3 {
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: center;
+  z-index: 100000;
 }
 
 .popup-content {
